# FoolGo

./: .gitignore  .gitmodules  CMakeLists.txt  MIT-LICENCE.txt  Makefile  README.md  TODO.md  cmake_for_eclipse.sh  log4cplus.properties
src/: .foolishgo.cpp.swp  CMakeLists.txt  Training.cpp  airset_util.h  bitset_util.h  board-TLT.h  board.h  board_TEST.h  board_in_gm-TLT.h  board_in_gm.h  board_in_gm_TEST.h  brd_change-TLT.h  brd_change.cc  brd_change.h  chain_set-TLT.h  chain_set.h  chain_set_TEST.h  def.h  engine-TLT.h  engine.h  engine_TEST.h  eye_set-TLT.h  eye_set.h  foolishgo.cc  foolishgo.cpp  lab.cc  mc_simulator-TLT.h  mc_simulator.h  mc_simulator_TEST.h  pnt_indx_set-TLT.h  pnt_indx_set.h  pos_cal-TLT.h  pos_cal.h  pos_cal_TEST.h  position.cc  position.h  rand.cc  rand.h  trainer.cc  types_and_constants.h  (+5 more)
src/board/: board.h  board_difference.cc  board_difference.h  board_output.cc  board_output.h  force.cc  force.h  full_board.h  full_board_hasher.h  pos_cal.h  position.cc  position.h  zob_hasher.h
src/deep_learning/: engine.h  learning_instance.h  sample.h
src/deep_learning/cnn/: graph_builder.h  hyper_params.h  model_params.h
src/deep_learning/resnet/: graph_builder.h
src/game/: engine-TLT.h  engine.h  fresh_game.h  game.h  game_info.h  monte_carlo_game.h  sgf_game.h
src/math/: bitset_util.h  rand.cc  rand.h  vector_util.cc  vector_util.h
src/piece_structure/: chain_set.h  eye_set.h
src/player/: input_player.h  mc_simulator.h  node_record.cc  node_record.h  passable_player.h  player.h  random_player.h  sgf_player.h  transposition_table.h  uct_player.h
src/util/: SGFParser.cpp  SGFParser.h  bitset_util.h  log_util.cc  log_util.h  rand.cc  rand.h  vector_util.cc  vector_util.h
test/: board_TEST.cc  board_TEST.h  board_in_gm_TEST.cc  board_in_gm_TEST.h  chain_set_TEST.h  def_for_test.h  engine_TEST.h  mc_simulator_TEST.h  test.h  zob_hasher_TEST.h
test/board/: board_TEST.cc  full_board_TEST.cc
test/game/: monte_carlo_game_TEST.cc
